<resources>
    <string name="app_name">VietCal</string>
    <string name="tab_calculator">Máy Tính</string>
    <string name="tab_extension">Tiện ích</string>
    <string name="btn_result">Kết Quả</string>
    <string name="btn_delete">Xoá</string>

    <string name="init_result_calculate">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="item_currency_covert">Quy Đổi Tiền Tệ</string>
    <string name="item_electricity_bill">Hoá Đơn Tiền Điện</string>
    <string name="item_water_bill">Hoá Đơn Tiền Nước</string>
    <string name="item_gross_to_net">Lương Gross -> Net</string>
    <string name="item_net_to_gross">Lương Net -> Gross</string>
    <string name="item_temperature_covert">Quy Đổi Nhiệt Độ</string>
    <string name="item_speed_convert">Quy Đổi Tốc Độ</string>
    <string name="item_bmi">Tính BMI</string>

    <!-- TODO: fragment calculate bmi text -->
    <string name="tv_height">Chiều Cao:</string>
    <string name="tv_weight">Cân Nặng :</string>

    <!-- TODO: fragment speed convert text -->
    <string name="tv_km_per_h">Km/h</string>
    <string name="tv_m_per_s">m/s</string>
    <string name="tv_nautical_mile">Hải lí/h</string>
    <string name="et_default_value">0</string>

    <!-- TODO: fragment temperature convert text -->
    <string name="tv_celsius">Độ C</string>
    <string name="tv_kelvin">Độ K</string>
    <string name="tv_fahrenheit">Độ F</string>

    <!-- TODO: fragment electricity calculate text -->
    <string name="tv_start_number">Số đầu</string>
    <string name="tv_end_number">Số cuối</string>
    <string name="tv_kwh">kWh</string>
    <string name="tv_total_number">Tổng điện năng tiêu thụ</string>
    <string name="tv_title_total_amount">* Thành tiền</string>
    <string name="tv_amount_before_tax">Tiền trước thuế</string>
    <string name="tv_amount_tax">Thuế GTGT (8%)</string>
    <string name="tv_amount_total">Tổng cộng (VNĐ)</string>

    <!-- TODO: fragment water calculate text -->
    <string name="tv_m3">m3</string>
    <string name="tv_total_number_m3">Số khối nước sử dụng</string>

    <!-- TODO: fragment gross to net text -->
    <string name="tv_salary_gross">Lương Gross</string>
    <string name="tv_salary_net">Lương Net</string>
    <string name="tv_currency_vn">VNĐ</string>
    <string name="tv_dependent_person">Người phụ thuộc</string>
    <string name="tv_local">Vùng</string>
    <string name="tv_result_salary">Kết quả tính lương</string>
    <string name="tv_gross_to_net">Gross -> Net</string>
    <string-array name="index_local">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>

    <!-- TODO: fragment convert currency text -->
    <string name="tv_currency_rates">Tỷ giá hiện tại</string>
</resources>