<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="15dp"
    tools:context=".fragment.TemperatureConvertFragment">

    <TextView
        android:id="@+id/tv_title_temperature_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_temperature_covert"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_celsius"
        android:layout_below="@+id/tv_title_temperature_convert"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_celsius"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_kelvin"
        android:layout_below="@+id/tv_celsius"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_kelvin"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_fahrenheit"
        android:layout_below="@+id/tv_kelvin"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_fahrenheit"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_celsius"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_temperature_convert"
        android:layout_alignEnd="@id/tv_celsius"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@id/tv_celsius"
        android:gravity="center_horizontal"
        android:hint="@string/et_default_value"
        android:textColorHint="@color/material_grey_600"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/material_grey_600"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_kelvin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_celsius"
        android:layout_alignEnd="@id/tv_kelvin"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@id/tv_kelvin"
        android:gravity="center_horizontal"
        android:hint="@string/et_default_value"
        android:textColorHint="@color/material_grey_600"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/material_grey_600"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_fahrenheit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_kelvin"
        android:layout_alignEnd="@id/tv_fahrenheit"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@id/tv_fahrenheit"
        android:gravity="center_horizontal"
        android:hint="@string/et_default_value"
        android:textColorHint="@color/material_grey_600"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/material_grey_600"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_calculate_temperature"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btn_numpad_3"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn_result"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_delete_temperature"
        android:layout_above="@id/btn_calculate_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btn_numpad_3"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn_delete"
        android:textSize="20sp"/>

</RelativeLayout>